--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "compress.js": "^1.2.2",
+    "compressorjs": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-load": "^4.0.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
